--- a/BigBadBolts_Assign4/BigBadBolts_Assign4/BigBadBolts_Assign4.csproj
+++ b/BigBadBolts_Assign4/BigBadBolts_Assign4/BigBadBolts_Assign4.csproj
@@ -56,6 +56,7 @@
     <Compile Include="Assign3_ref\RedditQueries.Designer.cs" />
     <Compile Include="Assign3_ref\Subreddit.cs" />
     <Compile Include="Assign3_ref\User.cs" />
+    <Compile Include="Comment.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -64,6 +65,8 @@
     </Compile>
     <Compile Include="Assign2_ref\HelperFunctions.cs" />
     <Compile Include="Assign2_ref\Post.cs" />
+    <Compile Include="HelperFunctions.cs" />
+    <Compile Include="Post.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Assign2_ref\RedditForm.cs">
@@ -72,6 +75,8 @@
     <Compile Include="Assign2_ref\RedditForm.Designer.cs" />
     <Compile Include="Assign2_ref\Subreddit.cs" />
     <Compile Include="Assign2_ref\User.cs" />
+    <Compile Include="Subreddit.cs" />
+    <Compile Include="User.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
@@ -96,6 +101,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="comments.txt" />
+    <Content Include="posts.txt" />
+    <Content Include="subreddits.txt" />
+    <Content Include="users.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
