--- a/BigBadBolts_Assign4/BigBadBolts_Assign4/BigBadBolts_Assign4.csproj
+++ b/BigBadBolts_Assign4/BigBadBolts_Assign4/BigBadBolts_Assign4.csproj
@@ -65,6 +65,12 @@
     </Compile>
     <Compile Include="Assign2_ref\HelperFunctions.cs" />
     <Compile Include="Assign2_ref\Post.cs" />
+    <Compile Include="Form2.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Form2.Designer.cs">
+      <DependentUpon>Form2.cs</DependentUpon>
+    </Compile>
     <Compile Include="HelperFunctions.cs" />
     <Compile Include="Post.cs" />
     <Compile Include="Program.cs" />
@@ -79,6 +85,9 @@
     <Compile Include="User.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Form2.resx">
+      <DependentUpon>Form2.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
