--- a/BigBadBolts_Assign4/BigBadBolts_Assign4/BigBadBolts_Assign4.csproj
+++ b/BigBadBolts_Assign4/BigBadBolts_Assign4/BigBadBolts_Assign4.csproj
@@ -113,8 +113,10 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="comments.txt" />
+    <Content Include="downVote_grey.png" />
     <Content Include="posts.txt" />
     <Content Include="subreddits.txt" />
+    <Content Include="upVote_grey.png" />
     <Content Include="users.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
